<resources>
    <string name="app_name">HashEasily</string>
    <string name="results">Hash</string>
    <string name="select_files">select files</string>
    <string name="selected_files">selected files</string>
    <string name="no_selected_files">No selected files!</string>
    <string name="no_results">No results!</string>
    <string name="MD5">MD5</string>
    <string name="SHA1">SHA-1</string>
    <string name="SHA256">SHA-256</string>
    <string name="SHA512">SHA-512</string>
    <string name="copy_all">copy all</string>
    <string name="clear">clear</string>
    <string name="configuration">Configuration</string>
    <string name="theme_configuration">Theme configuration</string>
    <string name="about">About</string>
    <string name="copied">Copied.</string>
    <string name="copied_hash">Copied hash.</string>
    <string name="license">License</string>
    <string name="version">Version</string>
    <string name="error">Error:</string>
    <string name="loading">Loading</string>
    <string name="this_program_is_free_software">
    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.
    </string>

</resources>